fixed critical issue with the date/title of blog entries on mobile devices.

--- a/style.css
+++ b/style.css
@@ -73,12 +73,13 @@ a {
     margin: 0.5rem 0 0.25rem 0;
     font-size: 1rem;
     line-height: 1.2;
-    justify-self: right;
-    position: absolute;
+    position: static;
 }
 
 .devblog-title-block {
-    display: grid;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .devblog-text hr {
